# tesserae

./: .gitignore  BENCHMARK_PLAN.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench_data/: alpha_quartz.cif  benchmark_results.md  diamond_si.cif  fcc_prim.cif  nacl_prim.cif  partial_occ.cif  perovskite.cif  run_benchmarks.sh  rutile_full_cell.cif  rutile_tio2.cif  sc.cif  zirconia_p21c.cif
crates/tesserae-cli/: Cargo.toml
crates/tesserae-cli/src/: main.rs
crates/tesserae-core/: Cargo.toml
crates/tesserae-core/benches/: enumerate.rs
crates/tesserae-core/src/: augment.rs  enumerate.rs  hnf.rs  lib.rs  necklace.rs  perm.rs  polya.rs  snf.rs  supercell.rs  t_canon.rs
crates/tesserae-io/: Cargo.toml
crates/tesserae-io/src/: cif.rs  lib.rs  moyo.rs  poscar.rs  write.rs
crates/tesserae-python/: Cargo.toml  pyproject.toml  tesserae.pyi
crates/tesserae-python/src/: lib.rs
